# whole_body_imitation_and_lfd

./: README.md
gmm_gmr/dtw_scaling/: demo_dtw.m
gmm_gmr/dtw_scaling/Scaling/: Scaling.m
gmm_gmr/dtw_scaling/data/: matlab.mat
gmm_gmr/gmm_gmr/: BIC.m  GMR.m  RSP4.txt  demo.m
gmm_gmr/gmm_gmr/data/: data.mat
gmm_gmr/observation/: CMakeLists.txt  main.cpp  naoRobot.cpp  naoRobot.h
gmm_gmr/reproduction/: CMakeLists.txt  group4_30cpp.txt  group4_50cpp.txt  main.cpp
hsmm/: trajHSMM01.m
hsmm/data/: RER.mat
hsmm/m_fcts/: EM_HMM.m  Viterbi_HMM.m  computeGammaHMM.m  init_GMM_kbins.m  init_GMM_kmeans.m  init_GMM_timeBased.m  plot2DArrow.m  plotGMM3D.m  plotHMMtrellis.m
whole_body_imitation/imitation/: CMakeLists.txt  Kinect.h  main.cpp  naoRobot.cpp  naoRobot.h
whole_body_imitation/kinect/: Kinect2Reader.cpp  Kinect2Reader.h  main.cpp
